--- a/simple-demos/recording-html-element.html
+++ b/simple-demos/recording-html-element.html
@@ -22,13 +22,13 @@
 
 <hr>
 <div style="display: none;">
-    <video controls autoplay playsinline id="preview-video"></video>
+    <video crossorigin="anonymous" controls autoplay playsinline id="preview-video"></video>
 </div>
 <div id="element-to-record" style="border: 5px solid gray; border-radius: 5px; padding: 20px; margin: 20px;">
     <input value="type something"><br><br>
     <span id="timer"></span><br><br>
 
-    <video crossorigin="anonymous" controls autoplay src="https://www.quirksmode.org/html5/videos/big_buck_bunny.webm"></video>
+    <video controls autoplay src="https://www.quirksmode.org/html5/videos/big_buck_bunny.webm"></video>
 </div>
 
 <script src="/RecordRTC.js"></script>
