--- a/simple-demos/recording-html-element.html
+++ b/simple-demos/recording-html-element.html
@@ -28,7 +28,7 @@
     <input value="type something"><br><br>
     <span id="timer"></span><br><br>
 
-    <video controls autoplay src="https://www.quirksmode.org/html5/videos/big_buck_bunny.webm"></video>
+    <video controls autoplay src="https://abvrtest.herokuapp.com/big_buck_bunny.webm"></video>
 </div>
 
 <script src="/RecordRTC.js"></script>
