--- a/simple-demos/recording-html-element.html
+++ b/simple-demos/recording-html-element.html
@@ -22,7 +22,7 @@
 
 <hr>
 <div style="display: none;">
-    <video crossorigin="anonymous" controls autoplay playsinline id="preview-video"></video>
+    <video controls autoplay playsinline id="preview-video"></video>
 </div>
 <div id="element-to-record" style="border: 5px solid gray; border-radius: 5px; padding: 20px; margin: 20px;">
     <input value="type something"><br><br>
